
[package]
name = "ubl-auth"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "DID-first Ed25519 JWT/JWKS verification for OIDC-style flows. Enforces alg=EdDSA, checks exp/nbf/iat, JWKS cache."
readme = "README.md"
repository = "https://github.com/danvoulez/ubl-auth"
homepage = "https://id.ubl.agency"
documentation = "https://docs.rs/ubl-auth"
keywords = ["jwt","jwks","ed25519","eddsa","oidc","did","did-key","did-web","axum"]
categories = ["authentication","cryptography","web-programming"]
exclude = [".github/*", "target/*", ".gitignore"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["macros"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
ureq = { version = "2.9", features = ["json"] }
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
